Release v1.1
Added sound effects to picking up and throwing blocks, along with fixing many inconvenient bugs. More features are planned if I find time to make them